--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,11 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+
+lib_deps =
+    UIPEthernet@^2.0.12          ; ENC28J60 sürücüsü
+    knolleary/PubSubClient@^2.8  ; MQTT
+    bblanchon/ArduinoJson@^6.21  ; 6.21.x hattı (hafıza dostu)
+
+build_flags =
+    -DMQTT_MAX_PACKET_SIZE=512
